# sylvialib

./: .pre-commit-config.yaml  README.md  pyproject.toml
sylvialib/: numpy_scripts.py  path_to_pixels.ipynb  plotting.py
sylvialib/deep_learning/: file_management.py  generator.py  unet_binary_class.py  unet_multi_class.py
sylvialib/images/: image_splitter.py
tests/: test_file_management.py  test_numpy_scripts.py
